--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
+    "react-google-autocomplete": "^2.7.0",
     "react-icons": "^4.4.0",
     "react-leaflet": "^4.0.1",
     "react-router": "^6.3.0",
@@ -21,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-styled-components": "^0.1.11",
     "styled-components": "^5.3.5",
+    "use-places-autocomplete": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
