--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "autoprefixer": "10.4.5",
     "bootstrap": "^5.1.3",
     "leaflet": "^1.8.0",
+    "load-script": "^2.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
