--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "leaflet": "^1.8.0",
     "load-script": "^2.0.0",
     "react": "^18.2.0",
+    "react-animated-css": "^1.2.1",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-google-autocomplete": "^2.7.0",
