--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-styled-components": "^0.1.11",
+    "reactjs-alert": "^2.2.0",
     "styled-components": "^5.3.5",
     "use-places-autocomplete": "^4.0.0",
     "web-vitals": "^2.1.4"
